feat: Java 升级